--- a/css/resume.css
+++ b/css/resume.css
@@ -168,7 +168,7 @@ section.resume-section .resume-item .resume-date {
 }
 
 a {
-  color: #55828b;
+  color: #343a40;
 }
 
 a:hover, a:focus, a:active {
