--- a/css/resume.css
+++ b/css/resume.css
@@ -22,6 +22,7 @@ h2,
 h3,
 h4,
 h5,
+a,
 h6 {
   font-family: 'Saira Extra Condensed', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
   font-weight: 700;
@@ -167,9 +168,7 @@ section.resume-section .resume-item .resume-date {
   color: #55828b !important;
 }
 
-a {
-  color: #343a40;
-}
+
 
 a:hover, a:focus, a:active {
   color: #55828b;
